kubernetes-menifest/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata: 
  name: onlineshop-gateway
  namespace: onlineshop-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
