kubernetes-menifest/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: onlineshop-vs
  namespace: onlineshop-ns
spec:
  hosts:
  - "*"
  gateways:
  - onlineshop-gateway
  http:
  - route:
    - destination:
        host: onlineshop-svc
        port:
          number: 80
